Add more citations.

--- a/ocr.bib
+++ b/ocr.bib
@@ -1,9 +1,54 @@
 @String{AAAI = {Proceedings of the AAAI Conference on Artificial Intelligence}}
 @String{ACL = {Proceedings of the Association for Computational Linguistics (ACL)}}
+@String{ECDL = {Proceedings of the European Conference on Digital Libraries (ECDL)}}
 @String{JCDL = {Proceedings of the ACM+IEEE-CS Joint Conference on Digital Libraries (JCDL)}}
 @String{ICDAR = {Proceedings of the International Conference on Document Analysis and Recognition (ICDAR)}}
 @String{ICLR = {Proceedings of the International Conference on Learning Representations (ICLR)}}
 @String{NAACL = {Proceedings of the Conference on Human Language Technology of the North American Chapter of the Association for Computational Linguistics (HLT-NAACL)}}
+
+
+@InProceedings{ayres13:_singin_supper,
+  author =	 {Marie-Louise Ayres},
+  title =	 {``{Singing} for their Supper'': Trove, {Australian}
+                  Newspapers, and the Crowd},
+  booktitle =	 {IFLA World Library and Information Congress},
+  year =	 2013,
+  url =		 {http://library.ifla.org/245/1/153-ayres-en.pdf}
+}
+
+@InProceedings{berg-kirkpatrick13:_unsup_trans_histor_docum,
+  author =	 {Taylor Berg-Kirkpatrick and Greg Durrett and Dan
+                  Klein},
+  title =	 {Unsupervised Transcription of Historical Documents},
+  booktitle =	 ACL,
+  year =	 2013
+}
+
+@InProceedings{berg-kirkpatrick14:_improv_types_model_histor_ocr,
+  author =	 {Taylor Berg-Kirkpatrick and Dan Klein},
+  title =	 {Improved Typesetting Models for Historical {OCR}},
+  booktitle =	 ACL,
+  year =	 2014
+}
+
+@Article{bode16:_thous_titles_author,
+  author =	 {Katherine Bode},
+  title =	 {Thousands of Titles without Authors: Digitized
+                  Newspapers, Serial Fiction, and the Challenges of
+                  Anonymity},
+  journal =	 {Book History},
+  year =	 2016,
+  volume =	 16
+}
+
+@InProceedings{boschetti09:_improv_ocr_accur_class_critic_edition,
+  author =	 {Federico Boschetti and Matteo Romanello and Alison
+                  Babeu and David Bamman and Gregory Crane},
+  title =	 {Improving {OCR} Accuracy for Classical Critical
+                  Editions},
+  booktitle =	 ECDL,
+  year =	 2009
+}
 
 @InProceedings{dong18:acl,
   author =	 {Rui Dong and David A. Smith},
@@ -14,3 +59,26 @@
   sortmonth =	 07,
   pdf = 	 {dong-smith-acl-2018.pdf}
 }
+
+@Article{mak14:_archaeol_digit,
+  author =	 {Bonnie Mak},
+  title =	 {Archaeology of a Digitization},
+  journal =	 {Journal of the Association for Information Science
+                  and Technology},
+  year =	 2014,
+  volume =	 65,
+  number =	 8
+}
+
+@Article{Underwood:2014ep,
+  author =	 {Underwood, Ted},
+  title =	 {Theorizing Research Practices We Forgot to Theorize
+                  Twenty Years Ago},
+  journal =	 {Representations},
+  year =	 {2014},
+  volume =	 {127},
+  number =	 {1},
+  pages =	 {64--72},
+  month =	 aug
+}
+
