--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -190,7 +190,7 @@ Creating copies and editions of texts has held a central place in the humanities
 
 The influence of OCR pervades contemporary humanities research and teaching. Most scholars pay OCR little mind---if they are even aware of it---because corpus analysis seems the province of a small subset of researchers. As Ted Underwood \citeyearpar[p.~64]{Underwood:2014ep} reminds us, however, ``[a]lgorithmic mining of large electronic databases has been quietly central to the humanities for two decades. We call this practice `search,' but `search' is a deceptively modest name for a complex technology that has come to play an evidentiary role in scholarship.'' Researchers and students increasingly rely on databases of digitized historical materials in conducting research, for reasons of geographic or economic access, but also for reasons of preservation, as libraries increasingly restrict physical access to fragile materials after digitization. As a result, researchers and students alike rely on search in OCR collections, often unwittingly. The predominant public interfaces of large-scale archives focus on page images, seeking to present the digitized object as a facsimile of its original, while scholars often cite historical materials directly, even when they were accessed through a digitized edition. Taken together, these practices make it easy to forget that we are all engaged in relatively sophisticated modes of machine reading each time we use a digital archive. Scholars sometimes invoke the OCR of these collections in warnings, as when Andrew Stauffer (2012) cautions, ``Algorithmic searching and text mining'' rely ``almost exclusively on the verbal content of idealized models of nineteenth-century printed materials, models that are themselves vitiated by numerous localized errors in character recognition.''
 
-Such critiques have spurred notable attempts to correct errorful OCR in large scale digitization projects. Bonnie Mak \citeyearpar{mak14:_archaeol_digit} notes that since 1999 the Text Creation Partnership (TCP) has mobilized ``legions of outsourced `vendors' who have keyboarded and tagged over 40,000 early English texts'' in EEBO, as well as another 8,000 for Gale Cengage's Eighteenth-Century Collections Online (ECCO) and Readex's Evans Early American Imprints (Evans-TCP). The Australian Newspaper Digitization Program, the results of which are available through the National Library of Australia's Trove portal, invested significant money in ``manually correcting the titles, subtitles, and first four lines of article text'' over 21 million newspaper pages (as of July 2016), mostly through low-cost, offshore editing services (Bode, 2016). In addition, Trove's interface allows users to manually correct the archive's text data, so that by July 2013, ``more than 100 million lines of text'' had been corrected through ``crowd-sourced effort'' \citep{ayres13:_singin_supper}.  Even so, the majority of Trove's OCR'd text remains uncorrected, as 100 million hand-corrected lines constitute only a small percentage of the total lines across 21 million newspaper pages. Most historical book and newspaper archives have deemed correction of articles too time consuming and costly; therefore, the bulk of keyword search within large scale archives, whether open-access or commercially licensed, depends on the errorful output of OCR.
+Such critiques have spurred notable attempts to correct errorful OCR in large scale digitization projects. Bonnie Mak \citeyearpar{mak14:_archaeol_digit} notes that since 1999 the Text Creation Partnership (TCP) has mobilized ``legions of outsourced `vendors' who have keyboarded and tagged over 40,000 early English texts'' in EEBO, as well as another 8,000 for Gale Cengage's Eighteenth-Century Collections Online (ECCO) and Readex's Evans Early American Imprints (Evans-TCP). The Australian Newspaper Digitization Program, the results of which are available through the National Library of Australia's Trove portal, invested significant money in ``manually correcting the titles, subtitles, and first four lines of article text'' over 21 million newspaper pages (as of July 2016), mostly through low-cost, offshore editing services \citep{bode16:_thous_titles_author}. In addition, Trove's interface allows users to manually correct the archive's text data, so that by July 2013, ``more than 100 million lines of text'' had been corrected through ``crowd-sourced effort'' \citep{ayres13:_singin_supper}.  Even so, the majority of Trove's OCR'd text remains uncorrected, as 100 million hand-corrected lines constitute only a small percentage of the total lines across 21 million newspaper pages. Most historical book and newspaper archives have deemed correction of articles too time consuming and costly; therefore, the bulk of keyword search within large scale archives, whether open-access or commercially licensed, depends on the errorful output of OCR.
 
 In large part due to these OCR issues, much computational research in the humanities has restricted itself to small, ``cleaner'' corpora such as Project Gutenberg, EEBO-TCP, the Wright American Fiction collection, the Chadwick-Healey British novels collection, or corpora custom-built for particular studies. The University of Richmond's groundbreaking ``Mining the Dispatch'' project (\url{http://dsl.richmond.edu/dispatch/}), for instance, bases its topic models not on the Chronicling America digitization of the Richmond \emph{Daily Dispatch}, but instead on a hand-transcribed subset of the Daily Dispatch. While that project revealed new insights about this important Civil War era newspaper, its methods could not be easily expanded across the much larger Chronicling America collection or its findings compared against the many other newspapers with only OCR transcriptions.
 
@@ -259,7 +259,7 @@ Before we discuss methods for improving OCR at the level of individual documents
 
 One common reaction of scholars and readers when confronted with OCR output is \emph{to decide that it is too noisy to use}. Many scholars we surveyed said that they avoided using OCR'd corpora due to the large number of errors. Some scholars described selecting among corpora on the basis of their error rates. We suspect, though more ethnography and analysis might make the analysis more sophisticated, that this reaction is an overgeneralization from the task of reading an OCR transcript as they would any other digitized text. In other words, the slowdown in reading induced by frequent errors causes readers to infer that other tasks may be similarly impaired. Similarly, a scholar attempting to produce a clean text by correcting OCR output may find that completely retyping it is faster and, again, conclude that the OCR transcript is useless for other tasks, as well. Further surveys might investigate whether these reactions are less common to users of image-front interfaces. It is also suggestive that one of the most widespread---and, as we quoted from Underwood above, ``undertheorized''---uses of OCR is for search, where users are least likely to read the transcript as a connected text.
 
-One natural response to OCR errors is to attempt to correct them. Even if we ignore, or do not have access to, the image from which the OCR was produced, we might still apply statistical models trained on clean text and a likely error distribution to infer a better transcript. This approach of taking a given OCR transcript and inferring the correct reading is usually known as \textbf{OCR post-correction}.\footnote{Tong and Evans (1996) provide an early and straightforward example of a ``noisy channel'' approach to OCR post-correction. Later approaches have generalized such models to more complicated cascades of finite-state transducers (Kolak et al., 2003; Xu and Smith, 2017), or used computational models of morphologically rich languages for spell checking (Boschetti et al., 2009), or used supervised training of log-linear models (Lund et al., 2011), or applied data augmentation and encoder-decoder models to build unsupervised models using only clean text for training \citep{dong18:acl}.}  For supervised training, and for model selection and refinement of unsupervised models, in-domain training data is usually necessary to achieve reasonable performance. Selecting good post-correction models may be almost as difficult as selecting the right OCR model for a given text. More work on model \emph{adaptation} (see Recommendation~\ref{rec:adaptation} below) is thus likely to be as helpful for improved post-correction, as more effective architectures for supervised learning of transducers. Improved training and adaptation for statistical language models should also be beneficial, in particular for documents with a mixture of languages (Recommendation~\ref{rec:diverse}). Finally, performing inference at the scale of collections instead of individual documents will allow these methods to exploit structures from fully duplicated documents to specialized domain vocabularies.
+One natural response to OCR errors is to attempt to correct them. Even if we ignore, or do not have access to, the image from which the OCR was produced, we might still apply statistical models trained on clean text and a likely error distribution to infer a better transcript. This approach of taking a given OCR transcript and inferring the correct reading is usually known as \textbf{OCR post-correction}.\footnote{Tong and Evans (1996) provide an early and straightforward example of a ``noisy channel'' approach to OCR post-correction. Later approaches have generalized such models to more complicated cascades of finite-state transducers (Kolak et al., 2003; Xu and Smith, 2017), or used computational models of morphologically rich languages for spell checking \citep{boschetti09:_improv_ocr_accur_class_critic_edition}, or used supervised training of log-linear models (Lund et al., 2011), or applied data augmentation and encoder-decoder models to build unsupervised models using only clean text for training \citep{dong18:acl}.}  For supervised training, and for model selection and refinement of unsupervised models, in-domain training data is usually necessary to achieve reasonable performance. Selecting good post-correction models may be almost as difficult as selecting the right OCR model for a given text. More work on model \emph{adaptation} (see Recommendation~\ref{rec:adaptation} below) is thus likely to be as helpful for improved post-correction, as more effective architectures for supervised learning of transducers. Improved training and adaptation for statistical language models should also be beneficial, in particular for documents with a mixture of languages (Recommendation~\ref{rec:diverse}). Finally, performing inference at the scale of collections instead of individual documents will allow these methods to exploit structures from fully duplicated documents to specialized domain vocabularies.
 
 Even with these advances in OCR post-correction, errors will remain. To be sure, it is perfectly valid to evaluate OCR transcripts for their adequacy as reading texts, as it is to train post-correction systems to produce better transcripts according to this metric. But reading a consecutive string is not the only text-analysis task that scholars can perform on digitized corpora. As mentioned above, the most common use for OCR is full-text search. In addition, researchers may wish to apply the same panoply of analysis methods to OCR transcripts that they deploy on other texts: text classification, word clustering and embedding, topic models, part-of-speech taggers, syntactic parsers, text-reuse analysis, and so on. Since scholars naturally are disinclined to devote time on data that turn out not to be useful, it is difficult to assess ``how dirty is too dirty'' for different tasks by meta-analysis of existing work, an example of the``file-drawer effect''.
 
@@ -500,25 +500,11 @@ We therefore propose the founding of an ``OCR Service Bureau'', housed in a libr
 \bibliographystyle{plainnat}
 \bibliography{ocr}
 
-% <p class="c6 c32"><span class="c2"></span><hr style="page-break-before:always;display:none;"><h2 class="c11 c37" id="h.rllgalyuv7d4"><span class="c25"></span></h2><h2 class="c11" id="h.och4zi8tx7q4"><span class="c25">References</span></h2><ul class="c23 lst-kix_1yzjdld97j5x-0 start"><li class="c0 c12"><span class="c2">ACL = Proceedings of the Association for Computational Linguistics</span></li><li class="c0 c12"><span class="c2">ECDL = Proceedings of the European Conference on Digital Libraries</span></li><li class="c0 c12"><span class="c2">ICDAR = Proceedings of the International Conference on Document Analysis and Recognition</span></li><li class="c0 c12"><span class="c2">JCDL = Proceedings of the ACM+IEEE Joint Conference on Digital Libraries</span></li><li class="c0 c12"><span class="c2">NAACL = Proceedings of the North American Chapter of the Association for Computational Linguistics</span></li><li class="c0 c12"><span class="c2">SIGIR = Proceedings of the ACM Special Interest Group on Information Retrieval</span></li></ul>
-
-% <p class="c3"><span>Marie-Louise Ayres (2013) ``Singing for their supper'': Trove, Australian newspapers, and the crowd. In </span><span class="c9">IFLA World Library and Information Congress. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=http://library.ifla.org/245/1/153-ayres-en.pdf&amp;sa=D&amp;ust=1542739736289000">http://library.ifla.org/245/1/153-ayres-en.pdf</a>&nbsp;</span>
-
-% <p class="c3"><span>Taylor Berg-Kirkpatrick, Greg Durrett, and Dan Klein (2013). Unsupervised transcription of historical documents. In </span><span class="c9">ACL</span><span class="c2">.</span>
-
-% <p class="c3"><span>Taylor Berg-Kirkpatrick and Dan Klein (2014). Improved typesetting models for historical OCR. In </span><span class="c9">ACL</span><span class="c2">.</span>
-
-% <p class="c3"><span>Katherine Bode (2016). Thousands of titles without authors: Digitized newspapers, serial fiction, and the challenges of anonymity. </span><span class="c9">Book History</span><span class="c2">, 16.</span>
-
-% <p class="c3"><span>Federico Boschetti, Matteo Romanello, Alison Babeu, David Bamman, and Gregory Crane (2009). Improving OCR accuracy for classical critical editions. In </span><span class="c9">ECDL</span><span class="c2">.</span>
-
 % <p class="c3"><span>&nbsp;Thomas M. Breuel, Adnan Ul-Hasan, Mayce Al Azawi, and Faisal Shafait (2013). High-performance OCR for printed English and Fraktur using LSTM Networks. In </span><span class="c9">ICDAR</span><span class="c2">.</span>
 
 % <p class="c3"><span>Thomas M. Breuel (2017). Robust, simple page segmentation using hybrid convolutional MDLSTM networks. In </span><span class="c9">ICDAR</span><span class="c2">.</span>
 
 % <p class="c3"><span>Tim Causer, Kris Grint, Anna-Maria Sichani, and Melissa Terras (2018). `Making such bargain': </span><span class="c9">Transcribe Bentham&nbsp;and the quality and cost-effectiveness of crowdsourced transcription. </span><span class="c9">Digital Scholarship in the Humanities</span><span class="c2">, 33(3):467--487.</span>
-
-% <p class="c3"><span>Rui Dong and David A. Smith (2018). Multi-input attention for unsupervised OCR correction. In </span><span class="c9">ACL</span><span class="c2">.</span>
 
 % <p class="c3"><span>Greta Franzini (2012--span><span class="c9">A Catalogue of Digital Editions. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=https://zenodo.org/badge/latestdoi/42574907&amp;sa=D&amp;ust=1542739736291000">https://zenodo.org/badge/latestdoi/42574907</a></span>
 
