--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -81,11 +81,11 @@
 
 \maketitle
 
-(c) 2018 David A. Smith and Ryan Cordell
+\copyright 2018 David A. Smith and Ryan Cordell
 
 Image credits
 
-The image of Venetus A (Marciana 822 = Graecus Z. 454) is derived from an original that is (c) 2007, Biblioteca Nazionale Marciana, Venezie, Italia. The derivative image is (c) 2010, Center for Hellenic Studies. All original and derivative images are licensed under the Creative Commons Attribution-Noncommercial-Share Alike 3.0 License. The CHS/Marciana Imaging Project was directed by David Jacobs of the British Library.
+The image of Venetus A (Marciana 822 = Graecus Z. 454) is derived from an original that is \copyright 2007, Biblioteca Nazionale Marciana, Venezia, Italia. The derivative image is \copyright 2010, Center for Hellenic Studies. All original and derivative images are licensed under the Creative Commons Attribution-Noncommercial-Share Alike 3.0 License. The CHS/Marciana Imaging Project was directed by David Jacobs of the British Library.
 
 \tableofcontents
 
