--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -188,7 +188,7 @@ Creating copies and editions of texts has held a central place in the humanities
 
 \subsection{OCR in the Humanities}
 
-The influence of OCR pervades contemporary humanities research and teaching. Most scholars pay OCR little mind---if they are even aware of it---because corpus analysis seems the province of a small subset of researchers. As Ted Underwood \citeyearpar[p.~64]{Underwood:2014ep} reminds us, however, ``[a]lgorithmic mining of large electronic databases has been quietly central to the humanities for two decades. We call this practice `search,' but `search' is a deceptively modest name for a complex technology that has come to play an evidentiary role in scholarship.'' Researchers and students increasingly rely on databases of digitized historical materials in conducting research, for reasons of geographic or economic access, but also for reasons of preservation, as libraries increasingly restrict physical access to fragile materials after digitization. As a result, researchers and students alike rely on search in OCR collections, often unwittingly. The predominant public interfaces of large-scale archives focus on page images, seeking to present the digitized object as a facsimile of its original, while scholars often cite historical materials directly, even when they were accessed through a digitized edition. Taken together, these practices make it easy to forget that we are all engaged in relatively sophisticated modes of machine reading each time we use a digital archive. Scholars sometimes invoke the OCR of these collections in warnings, as when Andrew Stauffer (2012) cautions, ``Algorithmic searching and text mining'' rely ``almost exclusively on the verbal content of idealized models of nineteenth-century printed materials, models that are themselves vitiated by numerous localized errors in character recognition.''
+The influence of OCR pervades contemporary humanities research and teaching. Most scholars pay OCR little mind---if they are even aware of it---because corpus analysis seems the province of a small subset of researchers. As Ted Underwood \citeyearpar[p.~64]{Underwood:2014ep} reminds us, however, ``[a]lgorithmic mining of large electronic databases has been quietly central to the humanities for two decades. We call this practice `search,' but `search' is a deceptively modest name for a complex technology that has come to play an evidentiary role in scholarship.'' Researchers and students increasingly rely on databases of digitized historical materials in conducting research, for reasons of geographic or economic access, but also for reasons of preservation, as libraries increasingly restrict physical access to fragile materials after digitization. As a result, researchers and students alike rely on search in OCR collections, often unwittingly. The predominant public interfaces of large-scale archives focus on page images, seeking to present the digitized object as a facsimile of its original, while scholars often cite historical materials directly, even when they were accessed through a digitized edition. Taken together, these practices make it easy to forget that we are all engaged in relatively sophisticated modes of machine reading each time we use a digital archive. Scholars sometimes invoke the OCR of these collections in warnings, as when Andrew Stauffer \citeyearpar{stauffer12:_ninet_centur_archiv_digit_age} cautions, ``Algorithmic searching and text mining'' rely ``almost exclusively on the verbal content of idealized models of nineteenth-century printed materials, models that are themselves vitiated by numerous localized errors in character recognition.''
 
 Such critiques have spurred notable attempts to correct errorful OCR in large scale digitization projects. Bonnie Mak \citeyearpar{mak14:_archaeol_digit} notes that since 1999 the Text Creation Partnership (TCP) has mobilized ``legions of outsourced `vendors' who have keyboarded and tagged over 40,000 early English texts'' in EEBO, as well as another 8,000 for Gale Cengage's Eighteenth-Century Collections Online (ECCO) and Readex's Evans Early American Imprints (Evans-TCP). The Australian Newspaper Digitization Program, the results of which are available through the National Library of Australia's Trove portal, invested significant money in ``manually correcting the titles, subtitles, and first four lines of article text'' over 21 million newspaper pages (as of July 2016), mostly through low-cost, offshore editing services \citep{bode16:_thous_titles_author}. In addition, Trove's interface allows users to manually correct the archive's text data, so that by July 2013, ``more than 100 million lines of text'' had been corrected through ``crowd-sourced effort'' \citep{ayres13:_singin_supper}.  Even so, the majority of Trove's OCR'd text remains uncorrected, as 100 million hand-corrected lines constitute only a small percentage of the total lines across 21 million newspaper pages. Most historical book and newspaper archives have deemed correction of articles too time consuming and costly; therefore, the bulk of keyword search within large scale archives, whether open-access or commercially licensed, depends on the errorful output of OCR.
 
@@ -259,7 +259,7 @@ Before we discuss methods for improving OCR at the level of individual documents
 
 One common reaction of scholars and readers when confronted with OCR output is \emph{to decide that it is too noisy to use}. Many scholars we surveyed said that they avoided using OCR'd corpora due to the large number of errors. Some scholars described selecting among corpora on the basis of their error rates. We suspect, though more ethnography and analysis might make the analysis more sophisticated, that this reaction is an overgeneralization from the task of reading an OCR transcript as they would any other digitized text. In other words, the slowdown in reading induced by frequent errors causes readers to infer that other tasks may be similarly impaired. Similarly, a scholar attempting to produce a clean text by correcting OCR output may find that completely retyping it is faster and, again, conclude that the OCR transcript is useless for other tasks, as well. Further surveys might investigate whether these reactions are less common to users of image-front interfaces. It is also suggestive that one of the most widespread---and, as we quoted from Underwood above, ``undertheorized''---uses of OCR is for search, where users are least likely to read the transcript as a connected text.
 
-One natural response to OCR errors is to attempt to correct them. Even if we ignore, or do not have access to, the image from which the OCR was produced, we might still apply statistical models trained on clean text and a likely error distribution to infer a better transcript. This approach of taking a given OCR transcript and inferring the correct reading is usually known as \textbf{OCR post-correction}.\footnote{Tong and Evans (1996) provide an early and straightforward example of a ``noisy channel'' approach to OCR post-correction. Later approaches have generalized such models to more complicated cascades of finite-state transducers (Kolak et al., 2003; Xu and Smith, 2017), or used computational models of morphologically rich languages for spell checking \citep{boschetti09:_improv_ocr_accur_class_critic_edition}, or used supervised training of log-linear models (Lund et al., 2011), or applied data augmentation and encoder-decoder models to build unsupervised models using only clean text for training \citep{dong18:acl}.}  For supervised training, and for model selection and refinement of unsupervised models, in-domain training data is usually necessary to achieve reasonable performance. Selecting good post-correction models may be almost as difficult as selecting the right OCR model for a given text. More work on model \emph{adaptation} (see Recommendation~\ref{rec:adaptation} below) is thus likely to be as helpful for improved post-correction, as more effective architectures for supervised learning of transducers. Improved training and adaptation for statistical language models should also be beneficial, in particular for documents with a mixture of languages (Recommendation~\ref{rec:diverse}). Finally, performing inference at the scale of collections instead of individual documents will allow these methods to exploit structures from fully duplicated documents to specialized domain vocabularies.
+One natural response to OCR errors is to attempt to correct them. Even if we ignore, or do not have access to, the image from which the OCR was produced, we might still apply statistical models trained on clean text and a likely error distribution to infer a better transcript. This approach of taking a given OCR transcript and inferring the correct reading is usually known as \textbf{OCR post-correction}.\footnote{\cite{tong96:_statis_approac_autom_ocr_error_correc_contex} provide an early and straightforward example of a ``noisy channel'' approach to OCR post-correction. Later approaches have generalized such models to more complicated cascades of finite-state transducers (Kolak et al., 2003; Xu and Smith, 2017), or used computational models of morphologically rich languages for spell checking \citep{boschetti09:_improv_ocr_accur_class_critic_edition}, or used supervised training of log-linear models (Lund et al., 2011), or applied data augmentation and encoder-decoder models to build unsupervised models using only clean text for training \citep{dong18:acl}.}  For supervised training, and for model selection and refinement of unsupervised models, in-domain training data is usually necessary to achieve reasonable performance. Selecting good post-correction models may be almost as difficult as selecting the right OCR model for a given text. More work on model \emph{adaptation} (see Recommendation~\ref{rec:adaptation} below) is thus likely to be as helpful for improved post-correction, as more effective architectures for supervised learning of transducers. Improved training and adaptation for statistical language models should also be beneficial, in particular for documents with a mixture of languages (Recommendation~\ref{rec:diverse}). Finally, performing inference at the scale of collections instead of individual documents will allow these methods to exploit structures from fully duplicated documents to specialized domain vocabularies.
 
 Even with these advances in OCR post-correction, errors will remain. To be sure, it is perfectly valid to evaluate OCR transcripts for their adequacy as reading texts, as it is to train post-correction systems to produce better transcripts according to this metric. But reading a consecutive string is not the only text-analysis task that scholars can perform on digitized corpora. As mentioned above, the most common use for OCR is full-text search. In addition, researchers may wish to apply the same panoply of analysis methods to OCR transcripts that they deploy on other texts: text classification, word clustering and embedding, topic models, part-of-speech taggers, syntactic parsers, text-reuse analysis, and so on. Since scholars naturally are disinclined to devote time on data that turn out not to be useful, it is difficult to assess ``how dirty is too dirty'' for different tasks by meta-analysis of existing work, an example of the``file-drawer effect''.
 
@@ -532,8 +532,6 @@ We therefore propose the founding of an ``OCR Service Bureau'', housed in a libr
 
 % <p class="c3"><span>Manuel Mager, Ximena Gutierrez-Vasques, Gerardo Sierra, Ivan Meza (2018). Challenges of language technologies for the indigenous languages of the Americas. In </span><span class="c9">COLING.</span>
 
-% <p class="c3"><span>Bonnie Mak (2014). Archaeology of a digitization. </span><span class="c9">Journal of the Association for Information Science and Technology</span><span class="c2">, 65(8).</span>
-
 % <p class="c3"><span>Jerome McGann (2014). </span><span class="c9">A New Republic of Letters: Memory and Scholarship in the Age of Digital Reproduction</span><span class="c2">. Harvard University Press.</span>
 
 % <p class="c3"><span>Benjamin Meier, Thilo Stadelmann, Jan Stampfli, Marek Arnold, and Mark Cieliebak (2017). Fully convolutional neural networks for newspaper article segmentation. In </span><span class="c9">ICDAR, pages 414--419. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=http://doi.org/10.1109/ICDAR.2017.75&amp;sa=D&amp;ust=1542739736294000">http://doi.org/10.1109/ICDAR.2017.75</a></span>
@@ -553,22 +551,6 @@ We therefore propose the founding of an ``OCR Service Bureau'', housed in a libr
 % <p class="c3"><span>T. F. Smith and M. S. Waterman (1981). Identification of common molecular subsequences. </span><span class="c9">Journal of Molecular Biology</span><span class="c2">, 147(1):195--197.</span>
 
 % <p class="c3"><span class="c2">Uwe Springmann and Anke L&uuml;deling (2016). OCR of historical printings with an application to building diachronic corpora: A case study using the RIDGES herbal corpus. arXiv preprint 1608.02153.</span>
-
-% <p class="c3"><span>Andrew Stauffer (2012). The nineteenth-century archive in the digital age. </span><span class="c9">European Romantic Review</span><span class="c2">, 23(3).</span>
-
-% <p class="c3"><span>Donald Sturgeon (2017). Unsupervised extraction of training data for pre-modern Chinese OCR. In </span><span class="c9">Proceedings of the Florida Artificial Intelligence Research Society Conference (FLAIRS)</span><span class="c2">, pages 613--618.</span>
-
-% <p class="c3"><span>Xiang Tong and David A. Evans (1996). A statistical approach to automatic OCR error correction in context. In </span><span class="c9">Proceedings of the Workshop on Very Large Corpora</span><span class="c2">, pages 88--100.</span>
-
-% <p class="c3"><span>Ted Underwood (2014). Theorizing research practices we forgot to theorize twenty years ago. </span><span class="c9">Representations</span><span class="c2">&nbsp;127(1):64--72.</span>
-
-% <p class="c3"><span>David Wemhoener, Ismet Zeki Yalniz, and R. Manmatha (2013). Creating an improved version using noisy OCR from multiple editions. In </span><span class="c9">ICDAR</span><span class="c2">, pages 160--164.</span>
-
-% <p class="c3"><span>John Wilkerson, David A. Smith, and Nick Stramp (2015). Tracing the flow of policy ideas in legislatures: A text reuse approach. </span><span class="c9 c47">American Journal of Political Science.</span>
-
-% <p class="c3"><span>Shaobin Xu and David A. Smith (2017). Retrieving and combining repeated passages to improve OCR. In </span><span class="c9">JCDL</span><span class="c2">.</span>
-
-% <p class="c3"><span>Yue Xu, Wenhao He, Fei Yin, and Cheng-Lin Liu (2017). Page segmentation for historical handwritten documents using fully convolutional networks. In </span><span class="c9">ICDAR, pages 541--546.</span>
 
 \chapter{Appendices}
 
