--- a/ocr.bib
+++ b/ocr.bib
@@ -70,6 +70,34 @@
   number =	 8
 }
 
+@Article{stauffer12:_ninet_centur_archiv_digit_age,
+  author =	 {Andrew Stauffer},
+  title =	 {The Nineteenth-Century Archive in the Digital Age},
+  journal =	 {European Romantic Review},
+  year =	 2012,
+  volume =	 23,
+  number =	 3
+}
+
+@InProceedings{sturgeon17:_unsup_extrac_train_data_pre_chines_ocr,
+  author =	 {Donald Sturgeon},
+  title =	 {Unsupervised Extraction of Training Data for
+                  Pre-modern Chinese {OCR}},
+  booktitle =	 {Proceedings of the Florida Artificial Intelligence
+                  Research Society Conference (FLAIRS)},
+  year =	 2017,
+  pages =	 {613-618}
+}
+
+@InProceedings{tong96:_statis_approac_autom_ocr_error_correc_contex,
+  author =	 {Xiang Tong and David A. Evans},
+  title =	 {A Statistical Approach to Automatic {OCR} Error
+                  Correction in Context},
+  booktitle =	 {Proceedings of the Workshop on Very Large Corpora},
+  year =	 1996,
+  pages =	 {88-100}
+}
+
 @Article{Underwood:2014ep,
   author =	 {Underwood, Ted},
   title =	 {Theorizing Research Practices We Forgot to Theorize
@@ -80,5 +108,40 @@
   number =	 {1},
   pages =	 {64--72},
   month =	 aug
+}
+
+@inproceedings{wemhoener2013creating,
+  title =	 {Creating an improved version using noisy {OCR} from
+                  multiple editions},
+  author =	 {Wemhoener, David and Yalniz, Ismet Zeki and
+                  Manmatha, R.},
+  booktitle =	 ICDAR,
+  pages =	 {160--164},
+  year =	 {2013}
+} 
+
+@Article{wilkerson15:ajps,
+  author =	 {John Wilkerson and David A. Smith and Nick Stramp},
+  title =	 {Tracing the Flow of Policy Ideas on Legislatures: A
+                  Text Reuse Approach},
+  journal =	 {American Journal of Political Science},
+  year =	 2015
+}
+
+@InProceedings{xu17:_retriev_combin_repeat_passag_improv_ocr,
+  author =	 {Shaobin Xu and David A. Smith},
+  title =	 {Retrieving and Combining Repeated Passages to
+                  Improve {OCR}},
+  booktitle =	 JCDL,
+  year =	 2017
+}
+
+@InProceedings{xu17:_page_segmen_histor_handw_docum,
+  author =	 {Yue Xu and Wenhao He and Fei Yin and Cheng-Lin Liu},
+  title =	 {Page Segmentation for Historical Handwritten
+                  Documents using Fully Convolutional Networks},
+  booktitle =	 ICDAR,
+  year =	 2017,
+  pages =	 {541-546}
 }
 
