--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -544,12 +544,6 @@ We therefore propose the founding of an ``OCR Service Bureau'', housed in a libr
 
 % <p class="c3"><span>Andrew Piper (2018). </span><span class="c9">Enumerations: Data and Literary Study</span><span class="c2">. University of Chicago Press.</span>
 
-% <p class="c3"><span>David A. Smith, Ryan Cordell, Elizabeth Maddock Dillon, Nick Stramp, and John Wilkerson (2014). Detecting and modeling local text reuse. In </span><span class="c9">JCDL</span><span class="c2">.</span>
-
-% <p class="c3"><span>David A. Smith, Ryan Cordell, and Abigail Mullen (2015). Computational methods for uncovering reprinted texts in antebellum newspapers. </span><span class="c9">American Literary History</span><span class="c2">, 27(3).</span>
-
-% <p class="c3"><span>T. F. Smith and M. S. Waterman (1981). Identification of common molecular subsequences. </span><span class="c9">Journal of Molecular Biology</span><span class="c2">, 147(1):195--197.</span>
-
 % <p class="c3"><span class="c2">Uwe Springmann and Anke L&uuml;deling (2016). OCR of historical printings with an application to building diachronic corpora: A case study using the RIDGES herbal corpus. arXiv preprint 1608.02153.</span>
 
 \chapter{Appendices}
@@ -663,7 +657,7 @@ We used the one-best OCR output from two sources: two million issues from the Ch
 
 For supervised training and for evaluation, we aligned manually transcribed texts to these one-best OCR transcripts: 1384 issues of the Richmond (Virginia) Daily Dispatch from 1860--1865 (RDD: \url{dlxs.richmond.edu/d/ddr/})\footnote{The transcription from the University of Richmond includes all articles but only some advertisements.} and 934 books from 1500--1800 from the Text Creation Partnership (TCP: \url{www.textcreationpartnership.org}). Both of these manually transcribed collections are in the public domain and in English, although both Chronicling America and the Internet Archive also contain much non-English text.
 
-To get more evidence for the correct reading of an OCR'd line, we aligned each OCR'd RDD issue to \emph{other} issues of the RDD and to other newspapers from Chronicling America and aligned each OCR'd TCP page to other pre-1800 books in the Internet Archive. To perform these alignments between noisy OCR transcripts efficiently, we used methods from our earlier work on text-reuse analysis (Smith et al., 2014; Wilkerson et al., 2015; Smith et al., 2015). An inverted index of hashes of word 5-grams was produced, and then all pairs from different pages in the same posting list were extracted. Pairs of pages with more than five shared hashed 5-grams were aligned with the Smith-Waterman algorithm with equal costs for insertion, deletion, and substitution, which returns a maximally aligned subsequence in each pair of pages (Smith and Waterman, 1981). Aligned passages that were at least five lines long in the target RDD or TCP text were output. For each target OCR line---i.e., each line in the training or test set---there are thus, in addition to the ground-truth manual transcript, zero or more \textbf{witnesses} from similar texts, to use the term from textual criticism.
+To get more evidence for the correct reading of an OCR'd line, we aligned each OCR'd RDD issue to \emph{other} issues of the RDD and to other newspapers from Chronicling America and aligned each OCR'd TCP page to other pre-1800 books in the Internet Archive. To perform these alignments between noisy OCR transcripts efficiently, we used methods from our earlier work on text-reuse analysis \citep{smith14:jcdl,wilkerson15:ajps,smith15:_comput_method_uncov_reprin_texts_anteb_newsp}. An inverted index of hashes of word 5-grams was produced, and then all pairs from different pages in the same posting list were extracted. Pairs of pages with more than five shared hashed 5-grams were aligned with the Smith-Waterman algorithm with equal costs for insertion, deletion, and substitution, which returns a maximally aligned subsequence in each pair of pages \citep{smith1981}. Aligned passages that were at least five lines long in the target RDD or TCP text were output. For each target OCR line---i.e., each line in the training or test set---there are thus, in addition to the ground-truth manual transcript, zero or more \textbf{witnesses} from similar texts, to use the term from textual criticism.
 
 In our experiments on OCR correction, each training and test example is a line of text following the layout of the scanned image documents.\footnote{The datasets can be downloaded from \url{http://www.ccs.neu.edu/home/dongrui/ocr.html}} The average number of characters per line is 42.4 for the RDD newspapers and 53.2 for the TCP books. Table~\ref{tab:reprints} lists statistics for the number of OCR'd text lines with manual transcriptions and additional witnesses. 43\% of the manually transcribed lines have witnesses in the RDD newspapers, and 64\% of them have witnesses in the TCP books. In the full Chronicling America data (not just the RDD), 44\% of lines align to at least one other witness. Although not all OCR collections will have this level of repetition, it is notable that these collections, which are some of the largest public-domain digital libraries, do exhibit this kind of reprinting. Similarly, at least 25\% of the pages in Google's web crawls are duplicates (Henzinger, 2006). This analysis suggests that, at least for nineteenth-century newspapers and pre-1800 English books, we are likely to find a significant number of editions with multiple digitized copies.
 
