--- a/ocr.bib
+++ b/ocr.bib
@@ -70,6 +70,36 @@
   number =	 8
 }
 
+@InProceedings{smith14:jcdl,
+  author =	 {David A. Smith and Ryan Cordell and Elizabeth
+                  Maddock Dillon and Nick Stramp and John Wilkerson},
+  title =	 {Detecting and Modeling Local Text Reuse},
+  booktitle =	 JCDL,
+  sortmonth = 	 09,
+  year =	 2014
+}
+
+@Article{smith15:_comput_method_uncov_reprin_texts_anteb_newsp,
+  author =	 {David A. Smith and Ryan Cordell and Abigail Mullen},
+  title =	 {Computational Methods for Uncovering Reprinted Texts
+                  in Antebellum Newspapers},
+  journal =	 {American Literary History},
+  volume =	 27,
+  number =	 3,
+  year =	 2015,
+  sortmonth =	 08
+}
+
+@article{smith1981,
+  author =	 {T. F. Smith and M. S. Waterman},
+  title =	 {Identification of common molecular subsequences},
+  journal =	 {Journal of Molecular Biology},
+  volume =	 147,
+  number =	 1,
+  year =	 1981,
+  pages =	 {195-197}
+}
+
 @Article{stauffer12:_ninet_centur_archiv_digit_age,
   author =	 {Andrew Stauffer},
   title =	 {The Nineteenth-Century Archive in the Digital Age},
